<resources>
    <string name="app_name">Notes - Easy Notebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="add_button">add button</string>
    <string name="title">Title</string>

    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="delete_all">Delete All</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="rate">Rate app</string>
<!--        <string name="appId">ca-app-pub-3940256099942544~3347511713</string>-->
<!--        <string name="bannerId">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="appId">ca-app-pub-6151803011990433~6541957732</string>
    <string name="bannerId">ca-app-pub-6151803011990433/2602712722</string>
    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>