<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/menu_search"
    android:icon="@drawable/ic_baseline_search_24"
    android:title="@string/search"
    android:iconTint="@color/white"
    app:showAsAction="ifRoom"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    />
    <item android:id="@+id/menu_rate"
        android:icon="@drawable/ic_baseline_rate_review_24"
        android:title="@string/rate"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"

        />
    <group android:checkableBehavior="single">
        <item
            android:title="@string/sort_by"
            android:id="@+id/menu_sortBy">
            <menu>
                <item android:title="@string/high"
                    android:id="@+id/menuHigh"/>
                <item android:title="@string/low"
                    android:id="@+id/menuLow"/>
            </menu>
        </item>
    </group>
    <item android:id="@+id/menu_deleteAll"

        android:title="@string/delete_all"
        android:iconTint="@color/white"
        app:showAsAction="never"
        />
</menu>