<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
     <variable
         name="sharedViewModel"
         type="com.ahmedzidan.finalnoteapp.data.viewmodel.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listLayout"
        tools:context=".fragment_screens.list.ListFragment">

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="@dimen/_8sdp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"

            tools:listitem="@layout/row_layout"/>


        <ImageView
            android:id="@+id/noDataImageView"
            android:layout_width="@dimen/_182sdp"
            android:layout_height="@dimen/_182sdp"
            android:src="@drawable/no_files"
            android:visibility="invisible"
            android:emptyDatabase="@{sharedViewModel.emptyDatabase}"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="0.32999998" />

        <TextView
            android:id="@+id/noDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:visibility="invisible"
            android:emptyDatabase="@{sharedViewModel.emptyDatabase}"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noDataImageView"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_60sdp"
            android:clickable="true"
            android:contentDescription="@string/add_button"
            android:focusable="true"
            android:navigateToAddFragment="@{true}"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.gms.ads.AdView

            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="@string/bannerId"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>